# connected

./: .gitignore  .pre-commit-config.yaml  .typos.toml  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE-MIT  PERMISSION_JUSTIFICATION.md  PLAY_STORE_GUIDE.md  PRIVACY_POLICY.md  README.md  deny.toml  generate_icons.py  lint_report.txt  privacy-policy.html  rust-toolchain.toml  test.txt
.cargo/: audit.toml  config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
android/: .env.example  build.gradle.kts  build_release.ps1  build_release.sh  gradle.properties  lint_output.txt  settings.gradle.kts
android/app/: build.gradle.kts  lint-baseline.xml  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/uniffi/connected_core/: connected_core.kt
android/app/src/main/kotlin/com/connected/app/: AndroidFilesystemProvider.kt  ClipboardHelperActivity.kt  ConnectedApp.kt  ConnectedService.kt  DeviceAdapter.kt  MainActivity.kt  MediaControlReceiver.kt  MediaObserverService.kt  PathResolver.kt  ProximityManager.kt  RustlsPlatformVerifier.kt  TelephonyProvider.kt  Theme.kt  TransferActionReceiver.kt
android/app/src/main/kotlin/com/connected/app/sync/: AndroidFilesystemProvider.kt  AppUpdater.kt  ClipboardHelperActivity.kt  ConnectedApp.kt  ConnectedService.kt  MainActivity.kt  MediaControlReceiver.kt  MediaObserverService.kt  PathResolver.kt  ProximityManager.kt  RcsAutoSendAccessibilityService.kt  RustlsPlatformVerifier.kt  TelephonyProvider.kt  Theme.kt  TransferActionReceiver.kt  UpdateReceiver.kt  WifiAwareManager.kt
android/app/src/main/kotlin/com/connected/core/: ConnectedSdk.kt
android/app/src/main/res/drawable/: ic_android.xml  ic_back.xml  ic_block.xml  ic_close.xml  ic_contact.xml  ic_delete.xml  ic_desktop.xml  ic_device_unknown.xml  ic_download.xml  ic_file.xml  ic_folder.xml  ic_ios.xml  ic_laptop.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_linux.xml  ic_macos.xml  ic_message.xml  ic_nav_clipboard.xml  ic_nav_devices.xml  ic_nav_media.xml  ic_nav_phone.xml  ic_nav_settings.xml  ic_nav_transfers.xml  ic_next.xml  ic_notification_logo.xml  ic_pair.xml  ic_pause.xml  ic_play.xml  ic_previous.xml  ic_receive.xml  ic_refresh.xml  ic_send.xml  ic_sync.xml  ic_tablet.xml  ic_terminal.xml  ic_tv.xml  ic_unpair.xml  ic_upload.xml  ic_volume_down.xml  (+3 more)
android/app/src/main/res/layout/: activity_main.xml  item_device.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/main/res/xml/: network_security_config.xml  provider_paths.xml  rcs_auto_send_accessibility_service.xml  shortcuts.xml
connected-website/: index.html
core/: Cargo.toml
core/src/: airdrop.rs  client.rs  device.rs  discovery.rs  error.rs  events.rs  facade.rs  file_transfer.rs  filesystem.rs  ios_paths.rs  lib.rs  security.rs  telephony.rs  transport.rs  update.rs
core/tests/: client_integration_test.rs  file_transfer_integration_test.rs
desktop/: Cargo.toml  README.md  build.rs  input.css  tailwind.config.js
desktop/assets/: styles.css
desktop/src/: autostart.rs  callbacks.rs  controller.rs  fs_provider.rs  ipc.rs  macos_media.rs  main.rs  mpris_server.rs  proximity.rs  remote_commands.rs  state.rs  titlebar.rs  utils.rs  windows_audio.rs
desktop/src/components/: device_card.rs  file_browser.rs  file_dialog.rs  icon.rs  mod.rs
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
fastlane/metadata/android/en-US/changelogs/: 30204.txt
ffi/: Cargo.toml  build.rs
ffi/src/: lib.rs
ffi/tests/: test_ffi.rs
ios/: project.yml
ios/Connected/App/: main.swift
ios/Connected/Core/: AirDropManager.swift  BonjourBrowser.swift  BonjourPublisher.swift  ConnectedAppModel.swift  GlassTheme.swift  IOSFilesystemProvider.swift  ViewCompat.swift
ios/Connected/Support/: Connected-Bridging-Header.h  Info.plist
ios/Connected/Views/: ConnectedRootView.swift  DeviceListView.swift  RemoteFilesView.swift  SettingsView.swift
metadata/: com.connected.app.sync.yml
packaging/aur/: .SRCINFO  .gitignore  PKGBUILD  PKGBUILD-bin  PKGBUILD-git  connected-desktop.desktop
packaging/flatpak/: README.md  com.paterkleomenis.Connected.desktop  com.paterkleomenis.Connected.metainfo.xml  com.paterkleomenis.Connected.yml  connected-desktop-wayland-socket
packaging/linux/: build-appimage.sh  build-rpm.sh
packaging/macos/: Connected.icns  Info.plist  build-macos.sh
packaging/rpm/: connected-desktop.spec  copr-package.cfg
packaging/windows/: AppxManifest.xml  README.md  fetch-webview2-bootstrapper.ps1  installer.wxs
patches/libxdo/: Cargo.toml
patches/libxdo/src/: lib.rs
scripts/: build-android.ps1  build-msix.ps1  build-msixupload-local.ps1  bump-version.sh  check-versions.sh  clean_uniffi_bindings.py  setup-dev.sh  update-aur.sh  update-copr.sh
scripts/ios/: archive-ipa.sh  build-rust-ios.sh  generate-bindings.sh  install-signing.sh  sync-version.sh
temp_bindings/uniffi/connected_ffi/: connected_ffi.kt
