[workspace]
resolver = "2"
members = [
    "core",
    "desktop",
    "ffi",
]

[profile.dev]
opt-level = 0
debug = 0
incremental = true

[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

# Preserve symbols in the FFI library for UniFFI metadata extraction
# uniffi-bindgen reads metadata from the compiled .so file's symbols
[profile.release.package.connected-ffi]
strip = false

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Connected Team"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }

# QUIC protocol
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.14"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# mDNS discovery
mdns-sd = "0.17"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# UniFFI for cross-platform bindings
uniffi = { version = "0.31", features = ["cli"] }

# Misc
uuid = { version = "1.20", features = ["v4", "serde"] }
once_cell = "1.21"
parking_lot = "0.12"
mime_guess = "2.0"
