[workspace]
resolver = "2"
members = ["core", "desktop", "ffi"]

[profile.dev]
opt-level = 0
debug = 0
incremental = true

[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

# Preserve symbols in the FFI library for UniFFI metadata extraction
# uniffi-bindgen reads metadata from the compiled .so file's symbols
[profile.release.package.connected-ffi]
strip = false

[workspace.package]
version = "2.1.3"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Connected Team"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }

# QUIC protocol
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = [
  "ring",
  "std",
] }
rcgen = "0.14"
bytes = "1.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# mDNS discovery
mdns-sd = "0.17"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# UniFFI for cross-platform bindings
uniffi = { version = "0.31", features = ["cli"] }

# Misc
uuid = { version = "1.20", features = ["v4", "serde"] }
once_cell = "1.21"
parking_lot = "0.12"
mime_guess = "2.0"

[workspace.lints.rust]
# Safety: prefer no unsafe code. Some crates (e.g. FFI exports) require unsafe.
unsafe_code = "warn"
# Edition compatibility
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }
# Allow some rustc lints that are too noisy
missing_docs = "allow"
elided_lifetimes_in_paths = "allow"

[workspace.lints.clippy]
# Standard lints
all = { level = "warn", priority = -1 }

# Allowed lints (too noisy for this codebase)
cargo_common_metadata = "allow"
module_name_repetitions = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
too_many_arguments = "allow"
needless_pass_by_value = "allow"
similar_names = "allow"
# Documentation lints (enable gradually)
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
# Style lints that are too noisy for existing code
uninlined_format_args = "allow"
unwrap_used = "allow"
expect_used = "allow"
panic = "allow"
redundant_closure_for_method_calls = "allow"
use_self = "allow"
missing_const_for_fn = "allow"
must_use_candidate = "allow"
cast_possible_truncation = "allow"
if_not_else = "allow"
match_wildcard_for_single_variants = "allow"
single_match_else = "allow"
option_if_let_else = "allow"
map_unwrap_or = "allow"
manual_assert = "allow"
manual_let_else = "allow"
items_after_statements = "allow"
significant_drop_tightening = "allow"
significant_drop_in_scrutinee = "allow"
redundant_else = "allow"
derive_partial_eq_without_eq = "allow"
struct_field_names = "allow"
future_not_send = "allow"
unused_async = "allow"
redundant_clone = "allow"
useless_let_if_seq = "allow"
used_underscore_binding = "allow"
or_fun_call = "allow"
checked_conversions = "allow"
match_same_arms = "allow"
unnecessary_debug_formatting = "allow"
unnecessary_wraps = "allow"
result_large_err = "allow"
enum_glob_use = "allow"
inline_always = "allow"
iter_not_returning_iterator = "allow"
map_flatten = "allow"
map_collect_result_unit = "allow"
needless_collect = "allow"
new_without_default = "allow"
return_self_not_must_use = "allow"
wildcard_imports = "allow"
