[workspace]
resolver = "3"
members = ["core", "desktop", "ffi"]

[profile.dev]
opt-level = 0
debug = 0
incremental = true

[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

# Preserve symbols in the FFI library for UniFFI metadata extraction
# uniffi-bindgen reads metadata from the compiled .so file's symbols
[profile.release.package.connected-ffi]
strip = false

[workspace.package]
version = "3.2.6"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Connected Team"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }

# QUIC protocol
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = [
  "ring",
  "std",
] }
rcgen = "0.14"
bytes = "1.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# mDNS discovery
mdns-sd = "0.20"

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"

# UniFFI for cross-platform bindings
uniffi = { version = "0.32", features = ["cli"] }

# Misc
uuid = { version = "1.20", features = ["v4", "v5", "serde"] }
once_cell = "1.21"
parking_lot = "0.12"
mime_guess = "2.0"
time = ">=0.3.0, <0.3.54"

[workspace.lints.rust]
# Safety: prefer no unsafe code. Some crates (e.g. FFI exports) require unsafe.
unsafe_code = "warn"
# Edition compatibility
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }

[workspace.lints.clippy]
# Standard lints
all = { level = "warn", priority = -1 }

# ---------------------------------------------------------------------------
# Replace libxdo with a tiny no-op stub (~80 lines) so the binary never links
# to the system libxdo.so, which has different sonames across distros
# (libxdo.so.3 on Ubuntu vs libxdo.so.4 on Arch). Menu keyboard-accelerator
# simulation is the only thing lost; menus still work fine.
# ---------------------------------------------------------------------------
[patch.crates-io]
libxdo = { path = "patches/libxdo" }
