[package]
name = "connected-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["rlib"]
name = "connected_core"

[dependencies]
tokio.workspace = true
quinn.workspace = true
rustls.workspace = true
rcgen.workspace = true
serde.workspace = true
serde_json.workspace = true
mdns-sd.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
mime_guess.workspace = true
dirs = "5"
sha2 = "0.10.9"
if-addrs = "0.14.0"
blake3 = "1.8.2"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
log = "0.4"
tracing-log = "0.2"
