[package]
name = "connected-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["rlib"]
name = "connected_core"

[dependencies]
tokio.workspace = true
quinn.workspace = true
rustls.workspace = true
rcgen.workspace = true
serde.workspace = true
serde_json.workspace = true
mdns-sd.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
mime_guess.workspace = true
dirs = "6"
sha2 = "0.10"
if-addrs = "0.14"
blake3 = "1.8"
zip = { version = "7.2", default-features = false, features = ["deflate", "time"] }
walkdir = "2.5"
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
semver = "1.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"
log = "0.4"
tracing-log = "0.2"
