[package]
name = "connected-desktop"
version.workspace = true
edition = "2024"

[dependencies]
dioxus = { version = "0.7.3", features = ["desktop"] }
dioxus-logger = "0.7.3"
android_logger = "0.15.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-std = "1.12"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
connected-core = { path = "../core" }
dirs = "6.0.0"
rfd = "0.17.2"
arboard = "3.6.1"
once_cell.workspace = true
mime_guess.workspace = true
base64 = "0.22.1"
image = "0.25.9"
btleplug = "0.11.8"
uuid = { workspace = true }
notify-rust = "4.11.7"
rcgen = "0.14.6"
walkdir = "2"
toml = "0.9"
toml_datetime = "0.7"
toml_edit = "0.24"
uniffi = "0.31.0"

[target.'cfg(target_os = "linux")'.dependencies]
mpris-server = "0.9.0"
ksni = "0.3"
dbus = "0.9.10"
mpris = "2.0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = ["Foundation", "Media_Control", "Foundation_Collections", "System"] }
windows_firewall = "0.5.0"


[features]
default = ["proximity-ble"]
proximity-ble = []

[build-dependencies]
winres = "0.1"
