[package]
name = "connected-desktop"
version.workspace = true
edition = "2024"

[dependencies]
dioxus = { version = "0.7", features = ["desktop"] }
dioxus-logger = "0.7"
android_logger = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-std = "1.13"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
connected-core = { path = "../core" }
dirs = "6.0"
rfd = "0.17"
arboard = "3.6"
once_cell.workspace = true
mime_guess.workspace = true
base64 = "0.22"
image = "0.25"
btleplug = "0.11"
uuid = { workspace = true }
notify-rust = "4.11"
rcgen = "0.14"
walkdir = "2"
toml = "0.9"
toml_datetime = "0.7"
toml_edit = "0.24"
uniffi = "0.31"

[target.'cfg(target_os = "linux")'.dependencies]
mpris-server = "0.9"
ksni = "0.3"
dbus = "0.9"
mpris = "2.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = ["Foundation", "Media_Control", "Foundation_Collections", "System"] }
windows_firewall = "0.5"


[features]
default = ["proximity-ble"]
proximity-ble = []

[build-dependencies]
winres = "0.1"
