[package]
name = "connected-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "connected_ffi"

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi_bindgen.rs"

[dependencies]
connected-core = { path = "../core" }
uniffi = { workspace = true, features = ["cli"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
log = "0.4"
tracing-log = "0.2"

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
